--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</header>
 
 	<main>
-		<a href="fonts/1621959163.html">ඔයාගේ සුබපැතුම බලන්න</a>
+		<a href="https://sldevilx.github.io/vesak-card.github.io/fonts/card.html">ඔයාගේ සුබපැතුම බලන්න</a>
 	</main>
 	<footer>
 
