--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	
 	<link rel="canonical" href="">
 	<meta name="keywords" content="vesak, friends, subapathum, වෙසක්, සුභපැතුම්, පින්බර">
-	<meta name="author" content="Kasmira Wijayathunga">
+	<meta name="author" content="lasiya">
 	<meta name="categories" content="Social, Vesak, Cards, Friends">
 	
 	<title>Online Vesak Card -  Stay Safe, Keep Distance - But Connect together</title>
