--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	
+	<meta charset="utf-8" />
+	<link rel="icon" href="./favicon.ico" type="image/x-icon"  />
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#221010"/>
+
+	<meta name="robots" content="index, follow">
+	<meta name="revisit-after" content="1 day">
+	<meta name="expires" content="Wed, 08 Feb 2023 23:16:56 GMT">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	
+	<link href="style.css" rel="stylesheet">
+	<style>
+	
+		body{
+			background-image: url(fg.png);
+		}
+		
+		main{
+			align-items: flex-end;
+		}
+		
+	</style>
+
+	<meta
+	  name="description"
+	  content="පින්බර වෙසක් මංගල්‍යයක් වේවා ! - පවතින තත්ව යටතේ හමුවී සුභපැතිය නොහැකි ඔබේ පවුලේ අයට, නෑදෑ හිතවතුන්ට අන්තරජාලය ඔස්සේ වෙසක් සුභපැතුමක් එක්කරන්න."
+	/>
+	
+	<link rel="canonical" href="">
+	<meta name="keywords" content="vesak, friends, subapathum, වෙසක්, සුභපැතුම්, පින්බර">
+	<meta name="author" content="lasiya">
+	<meta name="categories" content="Social, Vesak, Cards, Friends">
+	
+	<title>Online Vesak Card -  Stay Safe, Keep Distance - But Connect together</title>
+	
+	
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+
+	<header>
+		<h1 id="header-title">mskanr fjila fmdaoskla fõjd 
+		</h1>
+		
+	</header>
+
+	<main>
+		<a href="https://sldevilx.github.io/vesak-card.github.io/fonts/card.html">ඔයාගේ සුබපැතුම බලන්න</a>
+	</main>
+	<footer>
+
+		<div><div><span>Designed and Devoloped by</span></div><div><\Lasiya></div></div>
+	</footer>
+	
+</body>
+</html>	
 
