--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<meta
 	  name="description"
-	  content="පින්බර වෙසක් මංගල්‍යයක් වේවා ! - පවතින තත්ව යටතේ හමුවී සුභපැතිය නොහැකි ඔබේ පවුලේ අයට, නෑදෑ හිතවතුන්ට අන්තරජාලය ඔස්සේ වෙසක් සුභපැතුමක් එක්කරන්න."
+	  content="පින්බර වෙසක් මංගල්‍යයක් වේවා ! -ගෙනත් දෙන්න බැහැනේ ඉතීම් මේ වෙසක් දවසේ වගේ නෙවෙයි ඉඉලග වෙසක් එකට වත් අපිට එකට ඉන්න ලෙඩ දුක් වලින් තොරව ජිවත් වෙන්න ලැබෙන්න කියලා ප්‍රර්ථනා කරන්න."
 	/>
 	
 	<link rel="canonical" href="">
